# fiber-visualiser

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  TODO.md  build.sh
data/: 2x2x2.txt  3dkneeQuarterScaleSmooth.txt  atom9.1.txt  atom9.2.txt  bigatom.txt  downsample-20-300.vtu  frogQuarterScaleSmooth.txt  lobster.dat.raw.txt  test.tt  torus-factor-50-tets-320.vtu  vanessa.2.2.2.txt  vertex-neighbourhood-v0-V4-V3-v2-v1.txt  vertex-neighbourhood-v0-v6-V3-v2-V5-v1-v4.txt
examples/: cgal.cpp
src/: Archive.cpp  Arrangement.cpp  Arrangement.h  CGALTypedefs.h  CustomArrangementTypes.h  Data.cpp  Data.h  DisjointSet.h  FaceFiber.h  Fiber.cpp  Fiber.h  FiberPoint.h  GlobalConfig.h  Hashing.h  HistogramWidget.hpp  PlotWidget.cpp  PlotWidget.h  ReebSpace.cpp  ReebSpace.h  ReebSpace2.cpp  ReebSpace2.h  ScatterPlot.cpp  ScatterPlot.h  TetMesh.cpp  TetMesh.h  Timer.h  TracerVisualiserMain.cpp  TracerVisualiserWidget.cpp  TracerVisualiserWidget.h  TracerVisualiserWindow.cpp  TracerVisualiserWindow.h  io.cpp  io.h  send.h
src/ArcBall/: ._Ball.h
src/utility/: DisjointSet.hpp  Geometry.cpp  Geometry.h  Histogram.h  MarchingCubes.cpp  MarchingCubes.h  MergeTree.cpp  MergeTree.h  MeshTriangle.h  NetCDFWRapper.h  ScalarField.cpp  ScalarField.h  SurfaceMesh.cpp  SurfaceMesh.h  TetrahedronDepth.cpp  TetrahedronDepth.h  Utility.cpp  Utility.h  utility.cpp  utility.h
